--- a/app/src/main/res/layout/activity_job_opening_detail.xml
+++ b/app/src/main/res/layout/activity_job_opening_detail.xml
@@ -143,108 +143,75 @@
                 app:layout_constraintRight_toRightOf="parent"
         >
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/detail_view_count_layout"
+            <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/detail_view_count_imv"
+                    android:layout_width="@dimen/count_image_size"
+                    android:layout_height="@dimen/count_image_size"
+                    app:srcCompat="@drawable/ic_eye"
+                    android:layout_marginStart="15dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/detail_view_count_txv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:textColor="@color/light_black"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toRightOf="@+id/detail_view_count_imv"
+            />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/detail_favorite_count_imv"
+                    android:layout_width="@dimen/count_image_size"
+                    android:layout_height="@dimen/count_image_size"
+                    app:srcCompat="@drawable/ic_star"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/detail_favorite_txv"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/detail_favorite_txv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/txv_favorite"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/detail_favorite_count_layout">
+                    app:layout_constraintEnd_toEndOf="parent"/>
 
-                <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/detail_view_count_imv"
-                        android:layout_width="@dimen/count_image_size"
-                        android:layout_height="@dimen/count_image_size"
-                        app:srcCompat="@drawable/ic_eye"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintLeft_toLeftOf="parent"/>
-
-                <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/detail_view_count_txv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="12sp"
-                        android:textColor="@color/light_black"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintLeft_toRightOf="@+id/detail_view_count_imv"
-                />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/detail_favorite_count_layout"
+            <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/detail_favorite_count_txv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:textSize="12sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_chainStyle="spread"
-                    app:layout_constraintStart_toEndOf="@+id/detail_view_count_layout"
-                    app:layout_constraintEnd_toStartOf="@+id/detail_resume_count_layout">
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/detail_favorite_txv"/>
 
-                <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/detail_favorite_count_imv"
-                        android:layout_width="@dimen/count_image_size"
-                        android:layout_height="@dimen/count_image_size"
-                        app:srcCompat="@drawable/ic_star"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/detail_favorite_txv"/>
+            <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/detail_resume_count_imv"
+                    android:layout_width="@dimen/count_image_size"
+                    android:layout_height="@dimen/count_image_size"
+                    app:srcCompat="@drawable/create"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/detail_resume_count_txv"/>
 
-                <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/detail_favorite_txv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/txv_favorite"
-                        android:textSize="12sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"/>
-
-                <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/detail_favorite_count_txv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="12sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/detail_favorite_txv"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/detail_resume_count_layout"
+            <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/detail_resume_count_txv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:layout_marginEnd="15dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/detail_favorite_count_layout"
                     app:layout_constraintEnd_toEndOf="parent"
-            >
-
-                <androidx.appcompat.widget.AppCompatImageView
-                        android:id="@+id/detail_resume_count_imv"
-                        android:layout_width="@dimen/count_image_size"
-                        android:layout_height="@dimen/count_image_size"
-                        app:srcCompat="@drawable/create"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/detail_resume_count_txv"/>
-
-                <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/detail_resume_count_txv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="12sp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
